# package_sorter

./: .gitignore  README.md  pyproject.toml
package_sorter/: sorter.py
tests/: test_sorter.py
